# se-toolkit-lab-8

./: README.md  REPORT.md  docker-compose.yml.bak  pyproject.toml
lab/setup/: setup-simple.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md  task-4.md
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  observability.py  server.py  settings.py  tools.py
nanobot/: README.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
