[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for VictoriaLogs and VictoriaTraces observability"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
